--- a/config/locales/models/en.yml
+++ b/config/locales/models/en.yml
@@ -5,5 +5,5 @@ en:
         netease/monitoring:
           attributes:
             base:
-              to_many: The maximum keyword limit has been reached (%{limit})
+              too_many: The maximum keyword limit has been reached (%{limit})
 
