Add unique index [:uid, :user_id] to weibo_followers

--- a/config/locales/models/en.yml
+++ b/config/locales/models/en.yml
@@ -2,6 +2,10 @@ en:
   activerecord:
     errors:
       models:
+        weibo/follower:
+          attributes:
+            base:
+              taken: You have been following that user
         netease/monitoring:
           attributes:
             base:
